[package]
name = "todo-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.6"
bcrypt = "0.17.1"
jsonwebtoken = {version = "10.0.0", features = ["rust_crypto"]}
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228",  features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
tower-http = {version = "0.6.6", features = ["fs"] }
